blockml/test/errors/09_dashboard/e79/e79d.dashboard
dashboard: e79d
title: 'sales'
fields:
- filter: category
  result: from_field
  from_field: e79m.b.cat     



